--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,24 @@
+# Servor custom port
 server.port=5000
+
+# JDBC url / username / password
+# root is not recommended on production
 spring.datasource.url=jdbc:mysql://localhost:3306/polling_app?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=password
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+# hibernate schema creation on build, it is not recommended update on production because it might have conflicts with
+# existing stuff. We will change it to VALIDATE after we have migrations with Flyway or liquibase
 spring.jpa.hibernate.ddl-auto=update
 
+# showing all sql queries that hibernate make
 logging.level.org.hibernate.SQL=DEBUG
 
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.jackson.time-zone=UTC
 
+# custom settings for our jwt tokens
 app.jwtSecret=JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
