--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
-    <artifactId>polls</artifactId>
+    <groupId>mp27.security.starter</groupId>
+    <artifactId>spring-boot-starter-security</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>polls</name>
-    <description>Demo project for Spring Boot</description>
+    <name>spring-boot-starter</name>
+    <description>Spring boot starter</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -74,6 +74,10 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
     </dependencies>
 
